--- a/ClipperMS/src/main/resources/application-keycloak.properties
+++ b/ClipperMS/src/main/resources/application-keycloak.properties
@@ -13,3 +13,7 @@ keycloak.realm=ClipperMS
 keycloak.resource=clipper-ms
 keycloak.public-client=true
 keycloak.use-resource-role-mappings = true
+
+#url for spring config server
+spring.config.import= optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=refresh
