--- a/ClipperMS/pom.xml
+++ b/ClipperMS/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.5.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
