--- a/ClipperMS/src/main/resources/application-keycloak.properties
+++ b/ClipperMS/src/main/resources/application-keycloak.properties
@@ -15,5 +15,5 @@ keycloak.public-client=true
 keycloak.use-resource-role-mappings = true
 
 #url for spring config server
-spring.config.import= optional:configserver:http://localhost:8888
-management.endpoints.web.exposure.include=refresh
+spring.config.import= optional:configserver:http://root:password@localhost:8888
+spring.application.name=clipperms
