--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/MHormes/clipperMS.git
+spring.cloud.config.server.git.uri=https://github.com/MHormes/Clipper-MS-ConfigServer.git
+spring.security.user.name=root
+spring.security.user.password=password
+
+spring.cloud.config.server.git.password=password
+spring.cloud.config.server.git.username=maarten.hormes@gmail.com
