udpate config file

--- a/clipperms-development.properties
+++ b/clipperms-development.properties
@@ -2,3 +2,4 @@ clipper.name=maarten
 clipper.age=22
 clipper.school=fontys
 clipper.allowed=List.of("GET", "POST", "DELETE", "PUT")
+demo.school=avans
