--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.security.user.name=root
 spring.security.user.password=password
 
 spring.cloud.config.server.git.password=password
-spring.cloud.config.server.git.username=maarten.hormes@gmail.com
+spring.cloud.config.server.git.username=email@email.com
